public class MonsterAnimParams
{
    public const string DIRX = "DirX";
    public const string DIRY = "DirY";
    public const string ISCOLLISION = "IsCollision";
    public const string TRACING = "Tracing";
    public const string ATTACK = "Attack";
    public const string AWAKE = "Awake";
    public const string TRACE = "Trace";
    public const string STONEARMPUNCHTRIGGER = "StoneArmPunchTrigger";
    public const string PUNCHTRIGGER = "PunchTrigger";
    public const string PUNCHUPTRIGGER = "PunchUpTrigger";
    public const string STONEARMPUNCHFINISHTRIGGER = "StoneArmPunchFinishTrigger";
    public const string STONEARMROCKSTAMPTRIGGER = "StoneArmRockStampTrigger";
    public const string ROCKSTATEENDTRIGGER = "RockStateEndTrigger";
    public const string WAVE = "Wave";
    public const string STICKYARMACTIONTRIGGER = "StickyArmActionTrigger";
    public const string STICKYARMLAUNCHTRIGGER = "StickyArmLaunchTrigger";
    public const string STICKYARMPUNCHTRIGGER = "StickyArmPunchTrigger";
    public const string STICKYARMWIELDENDTRIGGER = "StickyArmWieldEndTrigger";
}
